--- a/public/styles.css
+++ b/public/styles.css
@@ -1,69 +1,54 @@
-header {
-    background-color: blue;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+.carousel-item {
+    height: 400px;
 }
-header h1 {
-    color: white;
-    margin: 0;
+.carousel-item img {
+    margin-top: 30px;
+    height: 100%;
+    object-fit: cover;
 }
-nav a {
-    color: white;
-    margin-left: 15px;
-    text-decoration: none;
-    font-weight: bold;
+.meu-carrossel {
+    width: 95%;
+    margin: 0 auto;
+    overflow: hidden;
 }
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 15px;
+#logo-site {
+    width: 100px;
+    height: auto;
 }
-nav ul li{
-    display: inline;
+.caixa-menuprincipal .menu li a {
+    font-size: 25px;
+    font-weight: 600;
 }
-nav ul li a {
-    color: white;
+.card-img-top {
+    height: 300px;
+    object-fit: cover;
 }
-.destaque {
-    width: 80%;
-    margin-top: 10px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.img-principal {
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 400px; ;
+    border-radius: 10px;
 }
-main {
-    padding: 20px;
-}
-.sobre {
-    margin-bottom: 30px;
-}
-footer {
-    background-color: blue;
-    color: white;
-    text-align: center;
+.descricao-detalhes {
+    text-align: justify;
+    border: 1px solid #ddd;
     padding: 15px;
-}
-/*layout flex*/
-.conteudo {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-}
-.pontos-turisticos, .eventos {
-    flex: 1;
-    padding: 15px;
-    border: 1px solid #ccc;
     border-radius: 8px;
-    
+    max-width: 800px;
+    margin: 20px auto;
 }
-.caixa-menuprincipal ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.titulo-detalhes {
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin: 20px 0;
 }
-
-
+.img-sobre {
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    min-height: 400px;
+    border-radius: 10px;
+    margin: 20px 0;
+}   
